--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B --file pom.xml
+      run: mvn -B --file pom.xml install
     - name: ls command
       run: tar zxf build/sk*.gz; ls build; ls build/sk*/
